bloccato: il bottone non fa niente

--- a/client-angular/src/app/app.component.html
+++ b/client-angular/src/app/app.component.html
@@ -1,5 +1,14 @@
-<div style="text-align:center">
-	<h1>
-		Here we are: {{results}}!!
-	</h1>
-</div>
+<!doctype HTML>
+<html>
+
+<head>
+</head>
+
+<body>
+  <h1>NEGOZIO</h1>
+  <button type="button" (onclick)="getProducts()">Prendi prodotti</button>
+
+  {{this.prodotti}}
+</body>
+
+</html>
