fix bottone, migliorato codice

--- a/client-angular/src/app/app.component.html
+++ b/client-angular/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 <body>
   <h1>NEGOZIO</h1>
-  <button type="button" (onclick)="getProducts()">Prendi prodotti</button>
+  <button (click)="getProducts()">Mostra prodotti</button>
 
   {{this.prodotti}}
 </body>
